--- a/produtos.html
+++ b/produtos.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Pacotes - Emagrecimento Saudável</title>
 
-		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="style.css">
-		<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-	</head>
-	<body>
-		<header>
-			<div class="caixa">
-				<h1><img src="logo.png"></h1>
+<head>
+	<meta charset="UTF-8">
+	<title>Pacotes - Emagrecimento Saudável</title>
 
-				<nav>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="produtos.html">Pacotes</a></li>
-                        <li><a href="imc.html">IMC</a></li>
-                        <li><a href="cadastro.html">Cadastro</a></li>
-					</ul>
-				</nav>
-			</div>
-		</header>
+	<link rel="stylesheet" href="reset.css">
+	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+</head>
 
-		<main>
-			<ul class="pacotes">
-				<li>
-					<h2>Trimestral</h2>
-					<img src="balanca.png">
-					<p class="pacoteDescricao">Visita de duas em duas semanas e com contato direto com o nutricionista</p>
-					<p class="pacotePreco">R$ 300,00 por Mês</p>
-				</li>
-				<li>
-					<h2>Semestral</h2>
-					<img src="semestral.png">
-					<p class="pacoteDescricao">Visita semanal, contato direto com o nutricionista e bioimpedância mensal.</p>
-					<p class="pacotePreco">R$ 250,00 por Mês</p>
-				</li>
+<body>
+	<header>
+		<div class="caixa">
+			<a href="index.html"><img src="logo.png" alt="logo Emagrecimento Saudável"></a>
 
-			</ul>
-		</main>
+			<nav>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="produtos.html">Pacotes</a></li>
+					<li><a href="imc.html">IMC</a></li>
+					<li><a href="cadastro.html">Cadastro</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
 
-		<footer>
-			<img src="logo.png">
-			<p class="copyright">&copy; Copyright Emagrecimento Saudável - 2022</p>
-		</footer>
-	</body>
-</html>    
+	<main>
+		<ul class="pacotes">
+			<li>
+				<h2>Trimestral</h2>
+				<img src="balanca.png">
+				<p class="pacoteDescricao">Visita de duas em duas semanas e com contato direto com o nutricionista</p>
+				<p class="pacotePreco">R$ 300,00 por Mês</p>
+			</li>
+			<li>
+				<h2>Semestral</h2>
+				<img src="semestral.png">
+				<p class="pacoteDescricao">Visita semanal, contato direto com o nutricionista e bioimpedância mensal.
+				</p>
+				<p class="pacotePreco">R$ 250,00 por Mês</p>
+			</li>
+
+		</ul>
+	</main>
+
+	<footer>
+		<img src="logo.png">
+		<p class="copyright">&copy; Copyright Emagrecimento Saudável - 2022</p>
+	</footer>
+</body>
+
+</html>
