--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			</div>
 
 			<div class="video">
-				<iframe width="853" height="480" src="https://www.youtube.com/embed/vBbMHSqjEyA"
+				<iframe width="683" height="384" src="https://www.youtube.com/embed/RIEUiJF3HGA"
 					title="YouTube video player" frameborder="0"
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 					allowfullscreen></iframe>
