Update para zebrar tabela

--- a/imc.html
+++ b/imc.html
@@ -62,7 +62,7 @@
 
 
 
-		<table class="center">
+		<table class="center tabela">
 			<thead>
 				<tr>
 					<th>IMC</th>
@@ -120,4 +120,5 @@
 </body>
 </body>
 
+</html>
 </html>
