missão visão e valores

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 			<h2 class="titulo-principal">Sobre Emagrecimento Saudável</h2>
 
 
-			<p>Com uma localização acessível a todos <strong>Emagrecimento Saudável</strong> nossa empresa já ajudou
-				centas de pessoas a melhorarem sua qualidade de vida. </p>
+			<p><b>Visão</b> Cuidado centrado nas pessoas, estabelecendo vínculos fraternos para usuários e colaboradores</p>
 
 			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar saúde e qualidade de vida"</strong>.</em></p>
 
@@ -56,14 +55,13 @@
 		</section>
 
 		<section class="beneficios">
-			<h3 class="titulo-principal">Benefícios</h3>
+			<h3 class="titulo-principal">Valores</h3>
 			<div class="conteudo-beneficios">
 				<ul class="lista-beneficios">
-					<li class="itens">Atendimento aos Clientes</li>
-					<li class="itens">Clínica Especializada</li>
-					<li class="itens">Localização</li>
-					<li class="itens">Profissionais Qualificados</li>
-					<li class="itens">Limpeza</li>
+					<li class="itens">Paixão</li>
+					<li class="itens">Responsabilidade</li>
+					<li class="itens">Integridade</li>
+					<li class="itens">Qualidade</li>
 				</ul>
 			</div>
 
