--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<h2 class="titulo-principal">Sobre Emagrecimento Saudável</h2>
 
 
-			<p><b>Visão</b> Cuidado centrado nas pessoas, estabelecendo vínculos fraternos para usuários e colaboradores</p>
+			<p><strong>Visão</strong> Cuidado centrado nas pessoas, estabelecendo vínculos fraternos para usuários e colaboradores</p>
 
 			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar saúde e qualidade de vida"</strong>.</em></p>
 
